--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.36;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1.48;
     color: #2196F3;
 }
 
@@ -21,7 +21,7 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.36;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1,48;
     color: #212121;
 }
 .second-half-webstudio2 {
@@ -29,7 +29,7 @@
     font-weight: 700;
     font-size: 26px;
     line-height: 1.36;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1.48;
     color: #fff;
 }
 .link-style {   
@@ -37,7 +37,7 @@
     font-weight: 500; 
     font-size: 14px;   
     line-height: 1.14; 
-    letter-spacing: 0,02em; 
+    letter-spacing: 1.32; 
     color: #212121;
 }  
 
@@ -47,7 +47,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0, 02em;
+    letter-spacing: 1.32;
 } 
  
 .link-contact:hover, .link-style:hover {  
@@ -84,14 +84,14 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 1.36; 
-    letter-spacing: 0,06em; 
+    letter-spacing: 1.96; 
 } 
 
 .list-works2 {  
     font-weight: 700;
     font-size: 16px;
     line-height: 1.30; 
-    letter-spacing: 0,03em;  
+    letter-spacing: 1.48;  
     color: #757575;
 } 
 
@@ -110,7 +110,7 @@
     font-family: Raleway;
     font-size: 14px;
     line-height: 1.24;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1.48;
 }
 .adress-footer2 {  
     font-style: normal;
@@ -119,7 +119,7 @@
     font-family: Raleway;
     font-size: 14px;
     line-height: 1.24;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1.48;
 } 
 .adress-footer3 { 
     font-style: normal;
@@ -128,7 +128,7 @@
     font-family: Raleway;
     font-size: 14px;
     line-height: 1.24;
-    letter-spacing: 0, 03em;  
+    letter-spacing: 1.48;  
 } 
  
 .large-text { 
@@ -139,7 +139,7 @@
     font-weight: 900;
     font-size: 40px;
     line-height: 1.60;
-    letter-spacing: 0, 06em;
+    letter-spacing: 1.96;
     color: #ffff;  
     background-color: #2f303a;
 }
@@ -148,13 +148,13 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 1.16;
-    letter-spacing: 0, 03em;
+    letter-spacing: 1.48;
 }
  
 .list-text2 { 
     font-size: 14px;
     line-height: 1.24;
-    letter-spacing: 0, 03em; 
+    letter-spacing: 1.48; 
     color: #757575;
 } 
 
@@ -162,19 +162,19 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 1.42;
-    letter-spacing: 0, 02em;
+    letter-spacing: 1.32;
 } 
  
 .team-name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0, 03em; 
+    letter-spacing: 1.32; 
 } 
 .team-expert { 
     font-size: 16px;
     line-height: 1.19;
-    letter-spacing: 0, 03em; 
+    letter-spacing: 1.48; 
     color: #757575;
 } 
  
